# PasswordManager

./: DESIGN.md  INSTALL.md  README.md
src/: CMakeLists.txt  PasswordManager.cpp  PasswordManager.h  Storage.cpp  Storage.h  UserData.cpp  UserData.h  Users.cpp  Users.h  Utilities.cpp  Utilities.h  passwd-mgr.c
src/test/: CMakeLists.txt  TestUserData.cpp  TestUsers.cpp  TestUsers.h  TestUtilities.cpp
